# termo

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.adoc  config-version.cmake.in  config.cmake.in  demo-async.c  demo-draw.c  demo-glib.c  demo.c  driver-csi.c  driver-ti.c  termkey-internal.h  termkey.c  termkey.h.in  termkey2-config.h.in  termkey2-internal.h  termkey2.c  termkey2.h  termo-config.h.in  termo-internal.h  termo.c  termo.h
cmake/: FindNcursesw.cmake
t/: 01base.c  02getkey.c  03utf8.c  06buffer.c  10keyname.c  12strpkey.c  13cmpkey.c  20canon.c  31position.c
tests/: 01base.c  02getkey.c  03utf8.c  04flags.c  05read.c  06buffer.c  10keyname.c  11strfkey.c  12strpkey.c  13cmpkey.c  20canon.c  30mouse.c  31position.c  32modereport.c  33focus.c  39csi.c  taplib.c  taplib.h
